fix some reactive functions