@@ -4,6 +4,7 @@ package com.dexels.navajo.parser.compiled;
 import java.util.List;
 import java.util.function.Function;
 
+import com.dexels.navajo.document.Operand;
 import com.dexels.navajo.expression.api.ContextExpression;
 import com.dexels.navajo.expression.api.FunctionClassification;
 import com.dexels.navajo.expression.api.TMLExpressionException;
@@ -15,16 +16,17 @@ public final class ASTDivNode extends SimpleNode {
         // System.out.println("in ASTDivNode()");
     }
 
-	public final Object interpret(Object a, Object b) throws TMLExpressionException {
-
+	public final Operand interpret(Operand ao, Operand bo) throws TMLExpressionException {
+		Object a = ao.value;
+		Object b = bo.value;
         if (a instanceof String || b instanceof String)
             throw new TMLExpressionException("Division not defined for strings");
         if (a instanceof Integer && b instanceof Integer)
-            return new Integer(((Integer) a).intValue() / ((Integer) b).intValue());
+            return Operand.ofInteger(Integer.valueOf(((Integer) a).intValue() / ((Integer) b).intValue()));
         double dA = Utils.getDoubleValue(a);
         double dB = Utils.getDoubleValue(b);
 
-        return new Double(dA / dB);
+        return Operand.ofFloat(Double.valueOf(dA / dB));
     }
     
 	@Override
